<?xml version="1.0"?>
<package format="2">
  <name>pan_tilt</name>
  <version>0.1.3</version>
  <description>The pan_tilt package controls any array of pan tilt devices</description>

  <maintainer email="sleepyserver6@gmail.com">Philip Hopley</maintainer>

  <license>BSD</license>

  <author email="sleepyserver6@gmail.com">Philip Hopley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>servo_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <build_export_depend>servo_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>servo_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend> 

</package>
